
TODO:
-----
 Android backend
 Speech for more window types that isn't automatically handled
 Pageination for large texts?
 Subtitle speech? Maybe only possible with something like pysrt and a subtitle file. https://pypi.python.org/pypi/pysrt

EXTERNAL TODO:
--------------
 Test Windows installer on Vista/7/8
 OSX installer?
 Android TTS app for android backend

** 0.0.79 **

SAPI: Add ability to retry initialization on errors
SAPI: Improve error recovery

** 0.0.78 **

Added fix for select dialogs causing looping errors in skins other than Confluence
Added fix for COMError issues when stopping speech in SAPI
Added more informative SAPI COMError logging

** 0.0.77 **

Update comtypes to the latest dev version
SAPI: Clear generated files on startup: possibly fixes issues with Win 7/8

** 0.0.76 **

Will now speak version updates for addons even if they were updated while the TTS addon was disabled or not yet started
Added 'Keymap' category to settings and moved keymap options there
Added 'Install Default Keymap', 'Install Custom Keymap', 'Edit Custom Keymap', 'Reset Custom Keymap To Defaults' and 'Remove Installed Keymap' to Keymap category
XBMC no longer needs to be restarted on keymap install/update

** 0.0.75 **

Fix for speech-dispatcher eventually hanging on volume up/down
Change speech-dispatcher volume range in settings to 0-200% (was 0-100%, but 50% actually represented the real 100%)
Fix for sapi pitch, volume and rate not working on Windows 8

** 0.0.74 **

Fix for window xml parser failing on skins with non-standard folder paths
Now speaks new versions for all addon updates
Added the sub-setting 'Delay (seconds)' to the 'Speak Extra Item Information Automatically' setting
Now says 'sub-setting' before speaking a sub-setting's name
Now speaks the category description as extra info on the settings category selection window
Added the ability to change backend speech volume with ctrl-plus and ctrl-minus

** 0.0.73 **
